# ai-chinese

./: .gitignore  MAINTENANCE.md  Mo-Dict.html  Mo-Reader.html  UPDATETODO.md  UV_GUIDE.md  dictation_setup.md  endict.py  enrich.sh  mksession-q.py  mksession.py  mo-common.js  mo-layout.css  pyproject.toml  readme.md  recovery_walkthrough.md  requirements-lite.txt  requirements.txt  sync.sh  walkthrough.md
AudioSRS/01.Backup/MDD/: dictionary.js  srs.js
AudioSRS/01.Backup/opencodeversion/: app.js
AudioSRS/01.Backup/srs_pipeline/: gemini_tts_config.toml  (+1 more)
AudioSRS/MDD/: db.js  dictionary.js  package-lock.json  server.js
AudioSRS/opencodeversion/: fonts.css  index.html  manifest.json  style.css
AudioSRS/srs_pipeline/: vocabulary.json.bk
ChineseTutor/tools/: preprocessor.py  vault_search.py  vault_write.py
Dict/: extract.py
Docs/: MH370坠海竟是数字劫机.json.bk  README.md  REPLICATION.md  chinese-tutor-handoff.md  commands.md  enrich_dict_usage.md  obsidian_audio_plugin.md
F5TTSreader/: story.txt  test_story_teller.py
MemoryWiki/: moreinfoaboutinstall.md
MemoryWiki/generator/: ai-chinese-server.service  handoff.md  requirements.txt  test_refined_sprint.py
pipelines/: endict.py  enrich.sh  mksession-q.py
pipelines/audio-srs-pipeline/: gemini_tts_config.toml  pipeline_azure.py  requirements.txt
pipelines/chinese-tutor/: history.py  preprocessor.py  vault_search.py  vault_write.py
pipelines/f5tts-reader/: config.json  story_teller.py
services/audio-srs-mdd/: dictionary.js  guide.md  package.json  phoneme-utils.js  server.js  srs.js
services/memory-wiki/: ai-chinese-server.service  run.sh  test_parser.py
web/: Editor.html  Mo-Cards.html  Mo-Dict.html  Mo-Reader-v2.html  Mo-Reader.html  MoDB-inspector.html
web/audio-srs/: app.js  index.html  test.js
(+105 files in other folders)
