[project]
name = "ai-chinese-workspace"
version = "0.1.0"
description = "Consolidated python environment for Chinese learning tools"
readme = "readme.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # General & root script dependencies
    "jieba>=0.42.1",
    "opencc-python-reimplemented>=0.1.7",
    "openai>=1.0.0",
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
    "python-dotenv>=1.0.0",
    
    # MemoryWiki generator dependencies
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    
    # AudioSRS dependencies
    "websockets>=12.0",
    "pypinyin>=0.53.0",
    "pydub>=0.25.1",
    
    # Remote git & local path dependencies
    "f5-tts",
    "qwen-asr",

    # Missing pipeline dependencies
    "wordfreq>=3.0.0",
    "google-genai>=0.1.0",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
f5-tts = { path = "./pipelines/f5tts-reader", editable = true }
torch = [
  { index = "pytorch-cu128", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu", marker = "platform_system != 'Linux' or platform_machine != 'x86_64'" }
]
torchaudio = [
  { index = "pytorch-cu128", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu", marker = "platform_system != 'Linux' or platform_machine != 'x86_64'" }
]
